debian-keyring (2016.03.xx) unstable; urgency=medium

  [ Jonathan McDowell ]
  * Emit DAK commands to cleanup DM ACLs when a DM becomes a DD.
  * Add check-dm-acl tool for verifying against ftp-master DM ACL list.

  [ Gunnar Wolf ]
  * Add new DD key 0xDF6D76C44D696F6B (Sven Bartscher) (RT #6154)
  * Add new DD key 0x88237A6A53AB1B2E (Harlan Lieberman-Berg) (RT #6155)
  * Stop shipping an empty debian-keyring.pgp file in the built package

 -- Jonathan McDowell <noodles@earth.li>  Fri, 26 Feb 2016 16:09:11 +0000

debian-keyring (2016.02.23) unstable; urgency=medium

  [ Gunnar Wolf ]
  * Replace 0x550F1A003433BD21 with 0x05BCA9EAD562EBBE (Rudy Godoy) (RT
    #6111)
  * Replace 0x9C84EE1AB9D02636 with 0x1784577F811F6EAC (Brian May) (RT
    #6125)
  * Sorted package list before md5sums creation, touched build directories
    to allow for reproducbile builds
  * Removed the obsolete, unused extra-keys.pgp keyring

  [ Jonathan McDowell ]
  * Replace 0x82091D9A5921B5D8 with 0x731991F308F24FEA (Andrew Mitchell)
    (RT #6129)
  * Replace 0xA02CDA9F3D08B612 with 0x2C0E8031F29C4A30 (Mark Purcell)
    (RT #6126)
  * Replace 0x6436436109F34024 with 0x2E31880A62EB5434 (Danai Sae-Han)
    (RT #5761)
  * Add new DD key 0xBED8449FCEE8DA88 (Otto Kekäläinen) (RT #6119)
  * Add new DD key 0x211A73C69A7B0FC7 (Dariusz Dwornikowski) (RT #6112)
  * Add new DD key 0x15E09AF4DF5182C8 (Daniel Stender) (RT #6113)
  * Add new DM key 0x78494EF72375A66C (Giovani Augusto Ferreira) (RT #6114)
  * Add new DM key 0x357312559D1E064B (Ondřej Nový) (RT #6115)
  * Add new DD key 0xCEAE6AD3AFE826FB (Afif Elghraoui) (RT #6147)
  * Add new DD key 0x51A09B18CF5A5068 (Victor Seva) (RT #6146)
  * Add new DD key 0xAEED6158020EAFFF (James Cowgill) (RT #6145)
  * Updated move-key to generate a basic git commit template
  * Replace 0x5DD5685778D621B4 with 0x1D661A372FED8F94 (Uwe Herrmann)
    (RT #6142)
  * Add new DM key 0xC7B0B792 (Jason Pleau) (RT #6117)