@@ -3,6 +3,7 @@ debian-keyring (2016.03.xx) unstable; urgency=medium
   [ Jonathan McDowell ]
   * Emit DAK commands to cleanup DM ACLs when a DM becomes a DD.
   * Add check-dm-acl tool for verifying against ftp-master DM ACL list.
+  * Switch to debhelper. Thanks to Niels Thykier.
 
   [ Gunnar Wolf ]
   * Add new DD key 0xDF6D76C44D696F6B (Sven Bartscher) (RT #6154)
